<resources>
    <string name="app_name">Music Practice Journal</string>

    <!--    Home Screen-->
    <string name="no_musical_fragments">Add a new musical fragment to start tracking your practice</string>
    <string name="bottom_nav_my_collection">My Collection</string>
    <string name="bottom_nav_calendar">Calendar</string>
    <string name="bottom_nav_help">Help</string>
    <string name="last_practice_item">Last practice: %1$s</string>

    <!--    Create Screen-->
    <string name="fab_description">Add new musical fragment</string>
    <string name="fragment_create_title">Add A Music Fragment To Practice</string>
    <string name="save_to_my_collection">Save to My Collection</string>
    <string name="save_btn_text">Save</string>
    <string name="technique_hint">Technique*</string>
    <string name="type_hint">Type*</string>
    <string name="name_hint">Name*</string>
    <string name="song_hint">Song Name*</string>
    <string name="section_hint">Section*</string>
    <string name="practice_time_hint">Practice Time (minutes)*</string>
    <string name="date_hint">Date</string>
    <string name="create_fragment_state">State*</string>
    <string name="track_tempo">Track tempo of the performance</string>

    <!--    Practice Screen-->
    <string name="desc_play_button">Play button</string>
    <string name="last_practice_label">Last Practice:</string>
    <string name="total_time_label">Total Time</string>
    <string name="tempo_title">Tempo</string>
    <string name="tempo_current">Current</string>
    <string name="tempo_final">Final</string>
    <string name="last_tempo_label">Last Tempo</string>
    <string name="target_tempo_label">Target Tempo</string>
    <string name="practice_time_label">Practice Time</string>
    <string name="btn_performance_review">Go to Performance Review</string>
    <string name="mins_amount">%1$s mins</string>
    <string name="bpm_amount">%1$s bpm</string>
    <string name="no_data">No data</string>
    <string name="title">%1$s - %2$s</string>

    <!--    Review Screen-->
    <string name="review_your_performance_title">Review Your Performance</string>
    <string name="accuracy_label">Accuracy:</string>
    <string name="accuracy_5_stars">I played always the correct notes. No mistakes</string>
    <string name="accuracy_4_stars">I played most of the times the correct notes. Very rarely I played a wrong note</string>
    <string name="accuracy_3_stars">I played the whole fragment with some recurring wrong notes</string>
    <string name="accuracy_2_stars">I played partially the fragment due to some wrong notes</string>
    <string name="accuracy_1_stars">I could not play the whole fragment. I haven\'t memorized it or cannot read it from the score</string>
    <string name="rhythm_label">Rhythm:</string>
    <string name="rhythm_5_stars">I played accurately all the rhythmic figures. I also have control to play behind and above the beat</string>
    <string name="rhythm_4_stars">I played accurately most of the rhythmic figures. There are only some small details to improve</string>
    <string name="rhythm_3_stars">I played partially the fragment. There are some rhythmic figures I cannot execute</string>
    <string name="rhythm_2_stars">I could not play most of the fragment\'s rhythmic figures.</string>
    <string name="rhythm_1_stars">I do not understand the rhythmic figures of this fragment</string>
    <string name="articulation_label">Articulation:</string>
    <string name="articulation_5_stars">I performed all the music articulations with a clear and distinct sound</string>
    <string name="articulation_4_stars">I performed most of the music articulations with a clear and distinct sound</string>
    <string name="articulation_3_stars">I performed some of the music articulations with a clear and distinct sound</string>
    <string name="articulation_2_stars">I performed a few music articulations with a clear and distinct sound</string>
    <string name="articulation_1_stars">This fragment has music articulations but I performed none of them</string>
    <string name="dynamics_label">Dynamics:</string>
    <string name="dynamics_5_stars">Fragment\'s dynamics are totally distinguishable on the interpretation</string>
    <string name="dynamics_4_stars">Fragment\'s dynamics are clear but I feel there\'s room for improvement</string>
    <string name="dynamics_3_stars">The intention of the dynamics is audible but is not very clear</string>
    <string name="dynamics_2_stars">Performance dynamics is partially aligned with the fragment\'s dynamics</string>
    <string name="dynamics_1_stars">Performance dynamics are completely not aligned with fragment\'s dynamics</string>
    <string name="relaxation_label">Relaxation:</string>
    <string name="relaxation_5_stars">I performed effortlessly. I can focus my attention in other things and play with no mistakes</string>
    <string name="relaxation_4_stars">I performed with no tension but from time to time I have to focus on my performances otherwise I could make mistakes</string>
    <string name="relaxation_3_stars">I did not feel tension in my body, however I have to put all my attention in my performance</string>
    <string name="relaxation_2_stars">I felt tension in my body, but no pain</string>
    <string name="relaxation_1_stars">I felt tension in my body, some parts of my body even hurt</string>
    <string name="accuracy_description">Did you played the correct notes? Did the notes sounded clear?</string>
    <string name="rhythm_description">How accurate was your rhythm?</string>
    <string name="articulation_description">Did the music articulations sounded clean?</string>
    <string name="dynamics_description">In your performance the intended dynamics are clear?</string>
    <string name="additional_notes_label">Additional Notes</string>
    <string name="additional_notes_hint">Write any other relevant aspect about your performance (optional).</string>
    <string name="save_review">Save Review</string>
    <string name="target_tempo">Target Tempo</string>
    <string name="current_tempo">Current Tempo</string>
    <string name="chip_other">Other</string>

    <string name="time_sheet_title">Enter Time</string>
    <string name="time_sheet_defaulttime">00:00</string>
    <string name="time_sheet_set">Set</string>

    <!--    Original tempo-->
    <string name="original_tempo_title">Speed Training</string>
    <string name="original_tempo_description_disabled">I don\'t want to track tempo information at this moment</string>
    <string name="original_tempo_description_enabled">Speed Training mode allows to track your tempo after each practice and measure your progress</string>
    <string name="original_tempo_hint">Target tempo (bpm)</string>
    <string name="original_tempo_btn">Continue</string>

    <!--    Current tempo-->
    <string name="current_tempo_hint">Current tempo (bpm)</string>
    <string name="current_tempo_description">Enter the highest tempo where you played three times in a row without making mistakes</string>

</resources>